# ServerBackuper

./: .gitignore  LICENSE  README.md  config.json.dist  config.yml.dist  ftp_config.yml.dist  main.py  pyproject.toml
modules/: ftp.py  ssh.py
