[tool.poetry]
name = "serverbackuper"
version = "0.1.0"
description = "Make backups using ssh connection"
authors = ["Rafał Kowalski <rafkow91@yahoo.com>"]
license = "MiT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^2.12.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
